ISIS-3275: fixes surefire launch (module path issues)