@@ -416,7 +416,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <slf4j-api.version>2.0.3</slf4j-api.version> <!-- also provided by spring-boot-starter-logging, needed to solve convergence issues -->
         <spring-boot.version>3.0.0-RC2</spring-boot.version>
         <summernote.version>0.8.11</summernote.version>
-        <surefire-plugin.argLine>-Xmx512m</surefire-plugin.argLine>
+        <surefire-plugin.argLine>-Xmx512m --add-modules com.sun.tools.xjc --add-reads org.eclipse.persistence.moxy=com.sun.tools.xjc</surefire-plugin.argLine>
         <swagger-core.version>1.6.8</swagger-core.version>
 
         <togglz.version>3.2.1</togglz.version>
